# crafting-interpreters

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
antlr4-interpreter/: CMakeLists.txt  Lox.g4  LoxLexer.g4  LoxParser.g4  ast_builder.cpp  ast_builder.h  ast_printer.cpp  environment.cpp  environment.h  gen_expr.py  interpreter.cpp  interpreter.h  lox_callable.cpp  lox_callable.h  lox_class.cpp  lox_class.h  main.cpp  parser.h  resolver.cpp  resolver.h  scanner.h  token.h  util.cpp  util.h
antlr4-interpreter/cmake/: ANTLRGrammarUtil.cmake  ANTLRGrammarUtil.sh.in  FindANTLR.cmake
interpreter/: CMakeLists.txt  ast_printer.cpp  ast_printer.h  environment.cpp  environment.h  expr.cpp  expr.h  gen_expr.py  interpreter.cpp  interpreter.h  lox_callable.cpp  lox_callable.h  lox_class.cpp  lox_class.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  token.cpp  token.h  util.cpp  util.h
interpreter/tests/: call_lox_function.lox  class_instance_set_get.lox  fibonacci_recursive.lox  for.lox  for2.lox  for3.lox  for5.lox  if.lox  run_test.py  run_tests.py  run_tests.sh  scopes.js  while.js
interpreter/tests/expect/: call_lox_function.lox.expect  class_instance_set_get.lox.expect  fibonacci_recursive.lox.expect  for3.lox.expect  for4.lox.expect  for5.lox.expect  parse_class.lox.expect  scopes.lox.expect  while.js.expect
tests/: call_ci_test_add.lox  closure.lox  fibonacci_recursive.lox  for4.lox  parse_class.lox  resolver.lox  run_tests.py
tests/expect/: call_ci_test_add.lox.expect  call_lox_function.lox.expect  class_instance_set_get.lox.expect  closure.lox.expect  for.lox.expect  for2.lox.expect  for3.lox.expect  for5.lox.expect  if.lox.expect  resolver.lox.expect  scopes.lox.expect  while.lox.expect
